--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Divorce Lawyer in Pune - Adv Parmeshwar D. Pawar</title>
- <meta name="description" content="Adv. Parmeshwar D. Pawar — Best Divorce Lawyer in Pune. Experienced family law attorney offering divorce, child custody, alimony, legal separation & mediation. Call for a consultation.">
+ <meta name="description" content="Best Divorce Lawyer in Pune - Adv Parmeshwar D. Pawar. Experienced family law attorney offering divorce, child custody, alimony, legal separation & mediation. Call for a consultation.">
 <meta name="keywords" content="Divorce lawyer Pune, best divorce lawyer in Pune, family lawyer Pune, matrimonial lawyer Pune, child custody lawyer Pune, alimony lawyer Pune, Advocate Parmeshwar D. Pawar, divorce attorney Pune">
 
       <link rel="canonical" href="https://www.advparmeshwardpawar.com/">
@@ -14,6 +14,56 @@
 
  <meta name="google-site-verification" content="KDyKUN7jqM8ms3M4tcL6tl2pZIl5PIIWs2vdL0teH9s" />
  <script src="https://analytics.ahrefs.com/analytics.js" data-key="e9mouX67UC7+dzWiVX6SkQ" async></script>
+    <script type="application/ld+json">
+{
+@context: "https://schema.org",
+@type: "LegalService",
+name: "Adv. Parmeshwar D. Pawar",
+image: "https://www.advparmeshwardpawar.com/images/Adv%20Parmeshwar%20D.%20Pawar.jpg",
+@id: "https://www.advparmeshwardpawar.com/",
+url: "https://www.advparmeshwardpawar.com/",
+description: "Adv. Parmeshwar D. Pawar — Best Divorce Lawyer in Pune. Experienced family law attorney offering divorce, child custody, alimony, legal separation & mediation. Call for a consultation.",
+foundingDate: "2010",
+telephone: "+919421861640",
+email: "parmeshwarp16@gmail.com",
+address: {
+@type: "PostalAddress",
+streetAddress: "Office No. 115, 1st Floor, Evolet Tiara, Near Narpatgiri Chowk, 423, Mangalwar Peth",
+addressLocality: "Pune",
+addressRegion: "MH",
+postalCode: "411011",
+addressCountry: "IN"
+},
+geo: {
+@type: "GeoCoordinates",
+latitude: 18.516726,
+longitude: 73.863150
+},
+openingHoursSpecification: [{
+@type: "OpeningHoursSpecification",
+dayOfWeek: [
+Monday,
+Tuesday,
+Wednesday,
+Thursday,
+Friday,
+Saturday,
+Sunday
+],
+opens: "10:00",
+closes: "19:00"
+}],
+sameAs: [
+https://www.facebook.com/adv.parmeshward.pawar,
+https://www.youtube.com/@AdvParmeshwarDPawar
+],
+aggregateRating: {
+@type: "AggregateRating",
+ratingValue: "4.9",
+reviewCount: "100"
+}
+}
+</script>
 </head>
 <body>
     <!-- Navigation -->
