--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -22,7 +22,7 @@ name: "Adv. Parmeshwar D. Pawar",
 image: "https://www.advparmeshwardpawar.com/images/Adv%20Parmeshwar%20D.%20Pawar.jpg",
 @id: "https://www.advparmeshwardpawar.com/",
 url: "https://www.advparmeshwardpawar.com/",
-description: "Adv. Parmeshwar D. Pawar — Best Divorce Lawyer in Pune. Experienced family law attorney offering divorce, child custody, alimony, legal separation & mediation. Call for a consultation.",
+description: "Best Divorce Lawyer in Pune - Adv Parmeshwar D. Pawar. Experienced family law attorney offering divorce, child custody, alimony, legal separation & mediation. Call for a consultation.",
 foundingDate: "2010",
 telephone: "+919421861640",
 email: "parmeshwarp16@gmail.com",
