--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -127,7 +127,7 @@
       <p>
         Divorce is never just a legal process — it’s an emotional journey.
         Whether you’re going through a mutual separation or a difficult
-        contested divorce, having the best divorce lawyer in Pune by your side
+        contested divorce, having the <a href="https://www.advparmeshwardpawar.com/" target="_blank" rel="noopener noreferrer"> best divorce lawyer in Pune</a> by your side
         can be the difference between anxiety and clarity, stress and
         resolution.
       </p>
@@ -333,7 +333,7 @@
         Whether you're exploring your options or ready to take action, we offer
         a full range of family law services:
       </p>
-      <h4>Mutual Divorce Lawyer in Pune</h4>
+      <h4><a href="https://www.advparmeshwardpawar.com/" target="_blank" rel="noopener noreferrer">Mutual Divorce Lawyer in Pune</a></h4>
       <p>Mutual consent divorce is often the most amicable and efficient way to end a marriage. As an experienced mutual divorce lawyer in Pune, I help both parties reach fair agreements on important matters like alimony, child custody, and property division, ensuring a smooth and respectful process.</p>
       <p>
         This is the most peaceful way to end a marriage. We help both parties
