--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -104,7 +104,7 @@ reviewCount: "100"
         </div>
         
         <div class="hero-content">
-            <h1 class="hero-title">Experienced Legal Counsel</h1>
+            <h1 class="hero-title">Experienced Divorce Lawyer</h1>
             <p class="hero-subtitle">Protecting Your Rights Since 2011</p>
             <p class="hero-description">
                 Over 15 years experience in matrimonial cases including contested divorce, mutual divorce, domestic violence, child custody and maintenance.
@@ -129,7 +129,7 @@ reviewCount: "100"
                 <h2 class="cta-title">Need Legal Assistance?</h2>
                 <p class="cta-subtitle">Don't face legal challenges alone</p>
                 <p class="cta-description">
-                    Get expert legal advice from an experienced attorney. I offer free initial consultations 
+                    Get expert legal advice from an experienced Lawyer. I offer free initial consultations 
                     to discuss your case and provide you with the guidance you need to make informed decisions.
                 </p>
                 <div class="cta-features">
@@ -162,7 +162,7 @@ reviewCount: "100"
         <div class="services-container">
             <div class="services-header">
                 <h2 class="services-title">Legal Services</h2>
-                <p class="services-subtitle">Advocate Parmeshwar D. Pawar is an expert in family law, offering expert guidance and support for all aspects of divorce proceedings. He gives the certainty or possibility of success about your case in the initial stage.
+                <p class="services-subtitle">Advocate Parmeshwar D. Pawar is an expert in family law, offering professional guidance and support for all aspects of divorce proceedings. Recognized as one of the Best Divorce Lawyers in Pune, he provides clients with clear advice and explains the certainty or possibility of success at the initial stage of the case.
 </p>
             </div>
             
@@ -261,6 +261,8 @@ Expert in matrimonial cases and highly experienced in consultations and the requ
         <div class="heading">
          <br>
          <h1>My Office</h1>
+                 <p class="services-subtitle">Located in the heart of Pune, Advocate Parmeshwar D. Pawar’s office provides professional legal consultation for divorce, family disputes, child custody, and related matters. Easily accessible for clients across Pune, the office is dedicated to offering trusted and reliable legal support.
+</p>
         </div>
          <div class="gallery">
            <img src="images/2.jpeg" alt="divorce-lawyer-in-pune-office">
