--- a/Pawar/blogs/how-to-choose-the-best-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/how-to-choose-the-best-divorce-lawyer-in-pune.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="https://images.unsplash.com/photo-1522202176988-66273c2fd55f"
+      content="https://www.advparmeshwardpawar.com/Blog%20Image/how-to-choose-best-divorce-lawyer-in-pune.jpg"
     />
     <meta property="og:url" content="https://www.advparmeshwardpawar.com/Best-Divorce-Lawyer-in-Pune.html" />
     <meta property="og:type" content="article" />
