--- a/Pawar/blogs/how-to-choose-the-best-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/how-to-choose-the-best-divorce-lawyer-in-pune.html
@@ -234,9 +234,9 @@
 <p>Start your search today with these considerations in mind and take the first step toward a fresh beginning.</p>
 
 
-
-            <!-- FAQ Section -->
-<!-- <section class="faq-section">
+<!-- 
+            FAQ Section -->
+<section class="faq-section">
     <h2>Frequently Asked Questions (FAQs)</h2>
     
     <div class="faq-item">
@@ -278,7 +278,7 @@
         <p>It depends on several factors like income, lifestyle, and the duration of marriage. We help you understand your legal rights clearly.</p>
       </div>
     </div>
-  </section> -->
+  </section>
   
   
   <script>
