--- a/Pawar/blogs/how-to-choose-the-best-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/how-to-choose-the-best-divorce-lawyer-in-pune.html
@@ -239,46 +239,38 @@
 <section class="faq-section">
     <h2>Frequently Asked Questions (FAQs)</h2>
     
-    <div class="faq-item">
-      <button class="faq-question">Q. How do I file for divorce in Pune?</button>
-      <div class="faq-answer">
-        <p>Start by booking a consultation. We’ll assess your situation and advise whether a mutual or contested divorce is best. Then we’ll draft and file the petition in the Pune family court.</p>
-      </div>
+   
+
+  <div class="faq-item">
+    <button class="faq-question">Q. How do I choose the right divorce lawyer in Pune?</button>
+    <div class="faq-answer">
+      <p>Look for a specialist in family law with local Pune experience, clear fee structure, accessibility, and solid reputation. Compare a few through consultations before deciding.</p>
     </div>
-  
-    <div class="faq-item">
-      <button class="faq-question">Q. What are the fees for a divorce lawyer in Pune?</button>
-      <div class="faq-answer">
-        <p>The fees for a divorce lawyer in Pune typically depend on the type of divorce (mutual vs contested), case complexity, duration, and the experience of the lawyer.</p>
-        <ul>
-          <li><strong>Mutual Consent Divorce:</strong> ₹30,000/- to ₹50,000/- (approx.)</li>
-          <li><strong>Contested Divorce:</strong> ₹50,000 to ₹2,00,000+, depending on the number of hearings, custody disputes, property matters, etc.</li>
-        </ul>
-        <p>At my practice, I offer transparent and customized fee structures following an initial consultation, with no hidden costs.</p>
-      </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">Q. What questions should I ask during a consultation?</button>
+    <div class="faq-answer">
+      <p>Ask about their experience with cases like yours, how often they settle outside court, communication methods, fees, and who in the team will manage your case. Also assess if you feel comfortable working with them.</p>
     </div>
-  
-    <div class="faq-item">
-      <button class="faq-question">Q. Can I get a divorce without going to court?</button>
-      <div class="faq-answer">
-        <p>For a mutual consent divorce, court appearances are limited and sometimes not required if handled strategically. But contested cases do involve hearings.</p>
-      </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">Q. How much does a divorce lawyer in Pune typically cost?</button>
+    <div class="faq-answer">
+      <p>Costs vary depending on case complexity and type (mutual vs contested), but mutual divorces are generally less expensive. Ask for a transparent fee breakdown during consultation.</p>
     </div>
-  
-    <div class="faq-item">
-      <button class="faq-question">Q. What if my spouse is unwilling to cooperate?</button>
-      <div class="faq-answer">
-        <p>You can still file under grounds like cruelty, desertion, adultery, or mental disorder. We’ll guide you based on your specific situation.</p>
-      </div>
+  </div>
+
+  <div class="faq-item">
+    <button class="faq-question">Q. How can I check a lawyer’s credibility?</button>
+    <div class="faq-answer">
+      <p>Review client feedback, check if they actively file matrimonial cases in Pune courts, and ask for client references. Local court websites and Google reviews can help too.</p>
     </div>
-  
-    <div class="faq-item">
-      <button class="faq-question">Q. Will I have to pay or receive alimony?</button>
-      <div class="faq-answer">
-        <p>It depends on several factors like income, lifestyle, and the duration of marriage. We help you understand your legal rights clearly.</p>
-      </div>
-    </div>
-  </section>
+  </div>
+</section>
+
+
   
   
   <script>
