--- a/Pawar/blogs/how-to-choose-the-best-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/how-to-choose-the-best-divorce-lawyer-in-pune.html
@@ -77,8 +77,8 @@
         Divorce is never an easy journey. When you're faced with the decision to part ways legally, having the right divorce lawyer by your side can make all the difference. 
 
       </p>
-      <p>If you are in Pune and looking for the best divorce lawyer, you might feel overwhelmed by the options available. 
-    </p>
+<p>If you are in Pune and looking for the <a href="https://www.advparmeshwardpawar.com/" target="_blank">best divorce lawyer</a>, it’s easy to feel overwhelmed by all the choices available.</p>
+
     <p>How do you ensure you’re making the right choice? What should you look for, and how can you be confident in your decision?
     </p>
 
