--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Divorce Lawyer in Pune - Adv Parmeshwar D. Pawar</title>
+    <title> Best Divorce Lawyer in Pune - Adv. Parmeshwar D. Pawar </title>
  <meta name="description" content="Best Divorce Lawyer in Pune - Adv Parmeshwar D. Pawar. Experienced family law attorney offering divorce, child custody, alimony, legal separation & mediation. Call for a consultation.">
 <meta name="keywords" content="Divorce lawyer Pune, best divorce lawyer in Pune, family lawyer Pune, matrimonial lawyer Pune, child custody lawyer Pune, alimony lawyer Pune, Advocate Parmeshwar D. Pawar, divorce attorney Pune">
 
@@ -84,7 +84,7 @@
   </div>
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="/" class="logo">Adv Parmeshwar D. Pawar</a>
+            <a href="/" class="logo">Adv. Parmeshwar D. Pawar</a>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -128,10 +128,9 @@
         <div class="cta-container">
             <div class="cta-content">
                 <h2 class="cta-title">Need Legal Assistance?</h2>
-                <p class="cta-subtitle">Don't face legal challenges alone</p>
+                <p class="cta-subtitle">Get Expert Legal Advice from the Best Divorce Lawyer in Pune</p>
                 <p class="cta-description">
-                    Get expert legal advice from an experienced Lawyer. I offer free initial consultations 
-                    to discuss your case and provide you with the guidance you need to make informed decisions.
+                   I provide professional legal support for both mutual and contested divorce cases. As the best divorce lawyer in Pune, I offer a free initial consultation to discuss your case and guide you with the right legal solutions for a smooth process.
                 </p>
                 <div class="cta-features">
                     <div class="feature">
