--- a/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
@@ -62,7 +62,7 @@
 
     <div class="container">
       <img
-        src="/Blog Image/mutual-consent-divorce-lawyer-in-pune-min.jpg"
+        src="/Blog Image/mutual-consent-divorce-lawyer-in-pune -min.jpg"
         alt="Feature Image"
         class="feature-image"
       />
