--- a/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
@@ -12,14 +12,14 @@
     <meta property="og:title" content="Mutual Consent Divorce Lawyer in Pune – A Complete Guide" />
     <meta property="og:description" content="Looking for a Mutual Consent Divorce Lawyer in Pune? Get expert guidance, free consultation, and hassle-free legal support for your divorce." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://yourwebsite.com/mutual-consent-divorce-lawyer-pune" />
-    <meta property="og:image" content="https://yourwebsite.com/images/mutual-divorce-lawyer-pune.jpg" />
+    <meta property="og:url" content="https://www.advparmeshwardpawar.com/blogs/mutual-consent-divorce-lawyer-in-pune.html" />
+    <meta property="og:image" content="https://www.advparmeshwardpawar.com/Blog%20Image/mutual-consent-divorce-lawyer-in-pune%20-min.jpg" />
   
     <!-- Twitter Card (X) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mutual Consent Divorce Lawyer in Pune – A Complete Guide" />
     <meta name="twitter:description" content="Looking for a Mutual Consent Divorce Lawyer in Pune? Get expert guidance, free consultation, and hassle-free legal support for your divorce." />
-    <meta name="twitter:image" content="https://yourwebsite.com/images/mutual-divorce-lawyer-pune.jpg" />
+    <meta name="twitter:image" content="https://www.advparmeshwardpawar.com/Blog%20Image/mutual-consent-divorce-lawyer-in-pune%20-min.jpg" />
     <!-- open graph end -->
     <link
       rel="stylesheet"
