--- a/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
@@ -195,49 +195,37 @@
 </section>
 
             <!-- FAQ Section -->
-<!-- <section class="faq-section">
-    <h2>Frequently Asked Questions (FAQs)</h2>
+ <section class="faq-section">
+    <h2> FAQs on Mutual Divorce in Pune </h2>
     
     <div class="faq-item">
-      <button class="faq-question">Q. How do I file for divorce in Pune?</button>
+      <button class="faq-question">Q.1- Can a mutual divorce be done online in Pune?</button>
       <div class="faq-answer">
-        <p>Start by booking a consultation. We’ll assess your situation and advise whether a mutual or contested divorce is best. Then we’ll draft and file the petition in the Pune family court.</p>
+        <p>Not really, but parts of it can be. You still have to show up in court - there's no way around that. But now some lawyers let you start the process online, send documents digitally, stuff like that. During COVID, some hearings happened on video calls, but that's not common anymore. The judge wants to see both of you in person for the important hearings. So, plan to take time off work for court dates.
+</p>
       </div>
     </div>
-  
     <div class="faq-item">
-      <button class="faq-question">Q. What are the fees for a divorce lawyer in Pune?</button>
+      <button class="faq-question">Q.2- Is mutual divorce faster than contested divorce?</button>
       <div class="faq-answer">
-        <p>The fees for a divorce lawyer in Pune typically depend on the type of divorce (mutual vs contested), case complexity, duration, and the experience of the lawyer.</p>
-        <ul>
-          <li><strong>Mutual Consent Divorce:</strong> ₹30,000/- to ₹50,000/- (approx.)</li>
-          <li><strong>Contested Divorce:</strong> ₹50,000 to ₹2,00,000+, depending on the number of hearings, custody disputes, property matters, etc.</li>
-        </ul>
-        <p>At my practice, I offer transparent and customized fee structures following an initial consultation, with no hidden costs.</p>
+        <p>Way faster. My neighbor got her mutual divorce done in 8 months. Another friend who fought with her husband? That took 4 years and cost her a fortune. With mutual divorce, you're looking at maybe a year if everything goes smoothly. Sometimes the court is backed up, so it might take longer, but usually not more than 18 months. The key is having all your paperwork ready and not changing your mind halfway through.
+     </p>
       </div>
     </div>
+ 
+     <div class="faq-item">
+      <button class="faq-question">Q.2- Do both spouses need to be present in the Pune court?</button>
+      <div class="faq-answer">
+     <p>Yes, both have to be there. No exceptions for the main hearings. Even if your husband lives in Mumbai or abroad, he has to come to Pune for the court dates. I know someone whose husband was in Dubai - he had to fly back three times. There might be ways around it with special permissions, but don't count on it. Plan for both of you to be present when needed.
+</p>
+      </div>
+    </div>
+   
   
-    <div class="faq-item">
-      <button class="faq-question">Q. Can I get a divorce without going to court?</button>
-      <div class="faq-answer">
-        <p>For a mutual consent divorce, court appearances are limited and sometimes not required if handled strategically. But contested cases do involve hearings.</p>
-      </div>
-    </div>
+   
   
-    <div class="faq-item">
-      <button class="faq-question">Q. What if my spouse is unwilling to cooperate?</button>
-      <div class="faq-answer">
-        <p>You can still file under grounds like cruelty, desertion, adultery, or mental disorder. We’ll guide you based on your specific situation.</p>
-      </div>
-    </div>
   
-    <div class="faq-item">
-      <button class="faq-question">Q. Will I have to pay or receive alimony?</button>
-      <div class="faq-answer">
-        <p>It depends on several factors like income, lifestyle, and the duration of marriage. We help you understand your legal rights clearly.</p>
-      </div>
-    </div>
-  </section> -->
+  </section> 
   
   
   <script>
