--- a/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
@@ -208,7 +208,7 @@
     <div class="faq-item">
       <button class="faq-question">Q.2- Is mutual divorce faster than contested divorce?</button>
       <div class="faq-answer">
-        <p>Way faster. My neighbor got her mutual divorce done in 8 months. Another friend who fought with her husband? That took 4 years and cost her a fortune. With mutual divorce, you're looking at maybe a year if everything goes smoothly. Sometimes the court is backed up, so it might take longer, but usually not more than 18 months. The key is having all your paperwork ready and not changing your mind halfway through.
+        <p>The mutual divorce process will be completed within 30 days if the court allows the 6 months cooling period waiver application. Otherwise the entire process will take 6 months from the date of filing of the petition.in both the scenario the parties shall remain present before the court and counseling in person or through video conferencing with prior permission.
      </p>
       </div>
     </div>
@@ -216,7 +216,8 @@
      <div class="faq-item">
       <button class="faq-question">Q.2- Do both spouses need to be present in the Pune court?</button>
       <div class="faq-answer">
-     <p>Yes, both have to be there. No exceptions for the main hearings. Even if your husband lives in Mumbai or abroad, he has to come to Pune for the court dates. I know someone whose husband was in Dubai - he had to fly back three times. There might be ways around it with special permissions, but don't count on it. Plan for both of you to be present when needed.
+     <p>If the parties are residing out of country, they secure their presence before the court through Video counseling
+Physical presence is not mandatory if the parties or any of the parties are out of India at the time of court hearing.
 </p>
       </div>
     </div>
