--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="icon" type="images/png" href="/images/favicon.png" />
 
  <meta name="google-site-verification" content="KDyKUN7jqM8ms3M4tcL6tl2pZIl5PIIWs2vdL0teH9s" />
  <script src="https://analytics.ahrefs.com/analytics.js" data-key="e9mouX67UC7+dzWiVX6SkQ" async></script>
