--- a/Pawar/blogs-page.html
+++ b/Pawar/blogs-page.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog Page-Adv. Parmeshwar D. Pawar</title>
   <link rel="stylesheet" href="style.css">
+      <link rel="icon" type="images/png" href="/images/favicon.png" />
+
   <style>
     :root {
       --brand: #ead16c;
