--- a/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
+++ b/Pawar/blogs/Best-Divorce-Lawyer-in-Pune.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Best Divorce Lawyer in Pune | Trusted Family Law Expert</title>
+        <link rel="icon" type="/images/png" href="/images/favicon.png" />
+
     <meta name="description" content="Need the best divorce lawyer in Pune? Adv. Parmeshwar D. Pawar offers trusted legal support for divorce, alimony, and family law matters." />
 
     <meta name="keywords" content="Best divorce lawyer in Pune, divorce advocate Pune, mutual consent divorce Pune, contested divorce lawyer Pune, family court lawyer Pune, legal separation Pune, top divorce lawyer Pune, best advocate for divorce in Pune" />
