--- a/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mutual Consent Divorce Lawyer in Pune    </title>
+        <link rel="icon" type="/images/png" href="/images/favicon.png" />
+
     <meta name="description" content="Looking for a Mutual Consent Divorce Lawyer in Pune? Get expert guidance, free consultation, and hassle-free legal support for your divorce." />
 
     <meta name="keywords" content="Mutual Consent Divorce Lawyer in Pune, Best Divorce Lawyer in Pune, Divorce Advocate Pune, Family Court Lawyer Pune, Experienced Divorce Lawyer in Pune, Affordable Divorce Lawyer in Pune, Mutual Divorce Legal Services Pune, Divorce Consultation Lawyer Pune, Top Divorce Lawyer in Pune">
