--- a/Pawar/blogs/how-to-choose-the-best-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/how-to-choose-the-best-divorce-lawyer-in-pune.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Discover how to choose the best divorce lawyer in Pune. Get tips on experience, fees, custody, and finding the right legal support for your case." />
 
     <meta name="keywords" content="best divorce lawyer in Pune, divorce lawyer Pune, how to choose divorce lawyer Pune, top family lawyer Pune, mutual divorce lawyer Pune, contested divorce lawyer Pune, child custody lawyer Pune, affordable divorce lawyer Pune, Pune family court lawyer">
+    <link rel="icon" type="/images/png" href="/images/favicon.png" />
 
     <meta name="author" content="Adv. Parmeshwar D. Pawar" />
     <meta
