--- a/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
@@ -222,6 +222,12 @@
 Physical presence is not mandatory if the parties or any of the parties are out of India at the time of court hearing.
 </p>
       </div>
+        <div class="faq-item">
+      <button class="faq-question">Q.3- Divorce lawyer in Pune contact number ?</button>
+      <div class="faq-answer">
+     <p>Adv. Parmeshwar D. Pawar – Best Divorce Lawyer in Pune. contact number : +91-9421861640
+</p>
+      </div>
     </div>
    
   
