--- a/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mutual Consent Divorce Lawyer in Pune    </title>
+    <title> Mutual Consent Divorce Lawyer in Pune </title>
         <link rel="icon" type="/images/png" href="/images/favicon.png" />
 
     <meta name="description" content="Looking for a Mutual Consent Divorce Lawyer in Pune? Get expert guidance, free consultation, and hassle-free legal support for your divorce." />
@@ -68,7 +68,7 @@
         alt="Feature Image"
         class="feature-image"
       />
-      <h2>Mutual Consent Divorce Lawyer in Pune- A Complete Guide</h2>
+      <h2>Mutual Consent Divorce Lawyer in Pune - A Complete Guide</h2>
       <div class="meta">
         Updated: Aug 29, 2025 · By <strong>Adv. Parmeshwar D. Pawar</strong>
       </div>
@@ -113,7 +113,7 @@
   
 
   <section>
-   <h2>How to Find a Good Mutual Divorce Lawyer in Pune
+   <h2>How to Find a Mutual Consent Divorce Lawyer in Pune
 </h2>
 <p>Going through a divorce is tough, even when you and your spouse both want it. I've seen many couples in Pune struggle to find the right lawyer who actually gets what they're going through. Here's what I've learned about picking someone who'll make this whole process less painful.
 </p>
