--- a/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/mutual-consent-divorce-lawyer-in-pune.html
@@ -68,7 +68,7 @@
         alt="Feature Image"
         class="feature-image"
       />
-      <h2>Mutual Consent Divorce Lawyer in Pune - A Complete Guide</h2>
+      <h2>Mutual Consent Divorce Lawyer in Pune - 2025 </h2>
       <div class="meta">
         Updated: Aug 29, 2025 · By <strong>Adv. Parmeshwar D. Pawar</strong>
       </div>
@@ -191,7 +191,7 @@
 
 <section>
     <h6>Final Line</h6>
-    <p>Finding the right divorce lawyer in Pune isn't about picking the most expensive one or the one with the fanciest office. It's about finding someone who understands what you're going through, knows how to get things done in our local courts, and makes you feel like you're in good hands during what's probably one of the hardest times in your life.
+    <p>Finding the right   <a href="https://www.advparmeshwardpawar.com/">divorce lawyer in Pune </a> isn't about picking the most expensive one or the one with the fanciest office. It's about finding someone who understands what you're going through, knows how to get things done in our local courts, and makes you feel like you're in good hands during what's probably one of the hardest times in your life.
         Take your time with this decision. The right lawyer will make a difficult situation bearable. The wrong one will make it a nightmare. You deserve someone who'll treat you with respect and actually fight for what you want, not just go through the motions to collect their fee.
         </p>
 </section>
