--- a/Pawar/blogs/local-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/local-divorce-lawyer-in-pune.html
@@ -13,8 +13,8 @@
     <meta property="og:title" content="Why You Need a Local Divorce Lawyer in Pune | Expert Legal Guidance" />
     <meta property="og:description" content="Discover why hiring a local divorce lawyer in Pune is crucial for your case. Get expert legal advice, understand local laws, and navigate divorce proceedings effectively with professional help." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://yourwebsite.com/mutual-consent-divorce-lawyer-pune" />
-    <meta property="og:image" content="https://yourwebsite.com/images/mutual-divorce-lawyer-pune.jpg" />
+    <meta property="og:url" content="https://www.advparmeshwardpawar.com/blogs/local-divorce-lawyer-in-pune.html" />
+    <meta property="og:image" content="https://www.advparmeshwardpawar.com/Blog%20Image/Why-You-Need%20a-Local-Divorce-Lawyer-in-Pune%20.jpg" />
   
     <!-- Twitter Card (X) -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -22,7 +22,7 @@
     " />
     <meta name="twitter:description" content="Discover why hiring a local divorce lawyer in Pune is crucial for your case. Get expert legal advice, understand local laws, and navigate divorce proceedings effectively with professional help.
     " />
-    <meta name="twitter:image" content="https://yourwebsite.com/images/mutual-divorce-lawyer-pune.jpg" />
+    <meta name="twitter:image" content="https://www.advparmeshwardpawar.com/Blog%20Image/Why-You-Need%20a-Local-Divorce-Lawyer-in-Pune%20.jpg" />
     <!-- open graph end -->
     <link
       rel="stylesheet"
