--- a/Pawar/blogs/local-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/local-divorce-lawyer-in-pune.html
@@ -69,7 +69,7 @@
         alt="Feature Image"
         class="feature-image"
       />
-      <h2>Mutual Consent Divorce Lawyer in Pune- A Complete Guide</h2>
+      <h2>Why You Need a Local Divorce Lawyer in Pune | Expert Legal Guidance</h2>
       <div class="meta">
         Updated: Sep 12, 2025 · By <strong>Adv. Parmeshwar D. Pawar</strong>
       </div>
