--- a/Pawar/blogs/local-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/local-divorce-lawyer-in-pune.html
@@ -160,49 +160,39 @@
 
 
             <!-- FAQ Section -->
-<!-- <section class="faq-section">
+<section class="faq-section">
     <h2>Frequently Asked Questions (FAQs)</h2>
     
     <div class="faq-item">
-      <button class="faq-question">Q. How do I file for divorce in Pune?</button>
+      <button class="faq-question">Q1.What type of lawyer is best for divorce?</button>
       <div class="faq-answer">
-        <p>Start by booking a consultation. We’ll assess your situation and advise whether a mutual or contested divorce is best. Then we’ll draft and file the petition in the Pune family court.</p>
+        <p>A family law attorney is best for divorce cases. They specialize in divorce, child custody, alimony, and property division.</p>
       </div>
     </div>
   
     <div class="faq-item">
-      <button class="faq-question">Q. What are the fees for a divorce lawyer in Pune?</button>
+      <button class="faq-question">Q2. Can we get divorce in 15 days? </button>
       <div class="faq-answer">
-        <p>The fees for a divorce lawyer in Pune typically depend on the type of divorce (mutual vs contested), case complexity, duration, and the experience of the lawyer.</p>
+        <p>In India, divorce cannot be granted in just 15 days.</p>
         <ul>
-          <li><strong>Mutual Consent Divorce:</strong> ₹30,000/- to ₹50,000/- (approx.)</li>
-          <li><strong>Contested Divorce:</strong> ₹50,000 to ₹2,00,000+, depending on the number of hearings, custody disputes, property matters, etc.</li>
+          <li>Mutual Consent Divorce requires a minimum 6-month cooling-off period, though in special cases, courts may waive it and finalize divorce in around 2–3 months.</li>
+          <li>Contested Divorce usually takes much longer, often 1–3 years depending on the case.</li>
         </ul>
-        <p>At my practice, I offer transparent and customized fee structures following an initial consultation, with no hidden costs.</p>
       </div>
     </div>
   
     <div class="faq-item">
-      <button class="faq-question">Q. Can I get a divorce without going to court?</button>
+      <button class="faq-question">Q3. What is the fastest way to get a divorce? </button>
       <div class="faq-answer">
-        <p>For a mutual consent divorce, court appearances are limited and sometimes not required if handled strategically. But contested cases do involve hearings.</p>
+        <p>The fastest way to get a divorce is through **Mutual Consent Divorce**, where both spouses agree on terms like alimony, child custody, and property division. If there are no disputes, courts may waive the 6-month waiting period, allowing the divorce to be finalized in **2–3 months**.
+        </p>
       </div>
     </div>
   
-    <div class="faq-item">
-      <button class="faq-question">Q. What if my spouse is unwilling to cooperate?</button>
-      <div class="faq-answer">
-        <p>You can still file under grounds like cruelty, desertion, adultery, or mental disorder. We’ll guide you based on your specific situation.</p>
-      </div>
-    </div>
   
-    <div class="faq-item">
-      <button class="faq-question">Q. Will I have to pay or receive alimony?</button>
-      <div class="faq-answer">
-        <p>It depends on several factors like income, lifestyle, and the duration of marriage. We help you understand your legal rights clearly.</p>
-      </div>
-    </div>
-  </section> -->
+  
+ 
+  </section> 
   
   
   <script>
