--- a/Pawar/blogs/divorceandchildcustody.html
+++ b/Pawar/blogs/divorceandchildcustody.html
@@ -230,40 +230,43 @@
 <p>The journey may feel overwhelming now, but thousands of Pune families successfully navigate these challenges every year. With proper preparation, legal guidance, and a focus on what truly matters, you can protect your rights while ensuring your children thrive in their new family structure.</p>
 
             <!-- FAQ Section -->
-<!-- <section class="faq-section">
+ <section class="faq-section">
     <h2>Frequently Asked Questions (FAQs)</h2>
     
     <div class="faq-item">
-      <button class="faq-question">Q1.What type of lawyer is best for divorce?</button>
+      <button class="faq-question">Q1.How is child custody decided in Pune family courts?</button>
       <div class="faq-answer">
-        <p>A family law attorney is best for divorce cases. They specialize in divorce, child custody, alimony, and property division.</p>
+        <p>Child custody is decided based on the child’s best interests—factors like age, education, health, and emotional well-being are considered, along with the financial and emotional stability of each parent.</p>
       </div>
     </div>
   
     <div class="faq-item">
-      <button class="faq-question">Q2. Can we get divorce in 15 days? </button>
+      <button class="faq-question">Q2. Can fathers get custody of children in Pune? </button>
       <div class="faq-answer">
-        <p>In India, divorce cannot be granted in just 15 days.</p>
-        <ul>
-          <li>Mutual Consent Divorce requires a minimum 6-month cooling-off period, though in special cases, courts may waive it and finalize divorce in around 2–3 months.</li>
-          <li>Contested Divorce usually takes much longer, often 1–3 years depending on the case.</li>
-        </ul>
+        <p>Yes. While younger children are often placed with mothers, fathers can get custody if they can prove it’s in the child’s best interest. Courts focus on welfare, not gender.</p>
+      
       </div>
     </div>
   
     <div class="faq-item">
-      <button class="faq-question">Q3. What is the fastest way to get a divorce? </button>
+      <button class="faq-question">Q3.What types of child custody are available under Indian law? </button>
       <div class="faq-answer">
-        <p>The fastest way to get a divorce is through **Mutual Consent Divorce**, where both spouses agree on terms like alimony, child custody, and property division. If there are no disputes, courts may waive the 6-month waiting period, allowing the divorce to be finalized in **2–3 months**.
+        <p> Courts may grant physical custody, joint custody, sole custody, or visitation rights depending on the circumstances.
         </p>
       </div>
     </div>
   
-  
+     <div class="faq-item">
+      <button class="faq-question">Q4.Can custody orders be changed later? </button>
+      <div class="faq-answer">
+        <p> Yes. Custody orders are not permanent. If circumstances change (like relocation, remarriage, or welfare concerns), a parent can apply for modification.
+        </p>
+      </div>
+    </div>
   
  
   </section> 
-   -->
+  
   
   <script>
     document.querySelectorAll('.faq-question').forEach(btn => {
