--- a/Pawar/blogs/legally-protect-your-assets-before-filing-for-divorce.html
+++ b/Pawar/blogs/legally-protect-your-assets-before-filing-for-divorce.html
@@ -66,7 +66,7 @@
 
     <div class="container">
       <img
-        src="/Blog Image/Divorce & Child Custody.jpg"
+        src="/Blog Image/protect-assets.jpg"
         alt="Feature Image"
         class="feature-image"
       />
