--- a/Pawar/blogs/legally-protect-your-assets-before-filing-for-divorce.html
+++ b/Pawar/blogs/legally-protect-your-assets-before-filing-for-divorce.html
@@ -14,8 +14,8 @@
     " />
     <meta property="og:description" content="Learn how to legally protect your assets before filing for divorce in India. Practical tips on property, finances, investments, and why consulting a family lawyer is essential." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://yourwebsite.com/mutual-consent-divorce-lawyer-pune" />
-    <meta property="og:image" content="https://yourwebsite.com/images/mutual-divorce-lawyer-pune.jpg" />
+    <meta property="og:url" content="https://www.advparmeshwardpawar.com/blogs/legally-protect-your-assets-before-filing-for-divorce.html" />
+    <meta property="og:image" content="https://www.advparmeshwardpawar.com/Blog%20Image/protect-assets.jpg" />
   
     <!-- Twitter Card (X) -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -23,7 +23,7 @@
     " />
     <meta name="twitter:description" content="Learn how to legally protect your assets before filing for divorce in India. Practical tips on property, finances, investments, and why consulting a family lawyer is essential.
     " />
-    <meta name="twitter:image" content="https://yourwebsite.com/images/mutual-divorce-lawyer-pune.jpg" />
+    <meta name="twitter:image" content="https://www.advparmeshwardpawar.com/Blog%20Image/protect-assets.jpg" />
     <!-- open graph end -->
     <link
       rel="stylesheet"
