--- a/Pawar/blogs/divorceandchildcustody.html
+++ b/Pawar/blogs/divorceandchildcustody.html
@@ -176,7 +176,7 @@
     
   </section>
 <h5>Choosing the Right Legal Representation</h5>
-<p>Experience in Pune's family courts matters greatly. Local lawyers understand judges' preferences and procedural nuances that outsiders often miss.</p>
+<p>Experience in Pune's family courts matters greatly. <a href="https://www.advparmeshwardpawar.com/" target="_blank" rel="noopener noreferrer">Local lawyers </a>understand judges' preferences and procedural nuances that outsiders often miss.</p>
 
 <p>Choose lawyers who prioritize settlement over prolonged battles. Overly aggressive attorneys can sometimes harm a case more than they help.</p>
 
