--- a/Pawar/blogs/local-divorce-lawyer-in-pune.html
+++ b/Pawar/blogs/local-divorce-lawyer-in-pune.html
@@ -73,8 +73,8 @@
       <div class="meta">
         Updated: Sep 12, 2025 · By <strong>Adv. Parmeshwar D. Pawar</strong>
       </div>
-      <p>
-        When facing the challenging journey of divorce, choosing the right legal representation can make all the difference between a smooth resolution and a prolonged, stressful battle. For residents of Pune, hiring a local divorce lawyer in Pune offers distinct advantages that can significantly impact the outcome of your case. Understanding why local expertise matters in divorce proceedings is essential for making an informed decision during this difficult time.
+   <p>
+        When facing the challenging journey of divorce, choosing the right legal representation can make all the difference between a smooth resolution and a prolonged, stressful battle. For residents of Pune, hiring a <a href="https://www.advparmeshwardpawar.com/" target="_blank" rel="noopener noreferrer">local divorce lawyer in Pune</a> offers distinct advantages that can significantly impact the outcome of your case. Understanding why local expertise matters in divorce proceedings is essential for making an informed decision during this difficult time.
 
       </p>
   
