--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -109,7 +109,7 @@
             <h1 class="hero-title">Experienced Divorce Lawyer</h1>
             <p class="hero-subtitle">Protecting Your Rights Since 2011</p>
             <p class="hero-description">
-                Over 15 years experience in matrimonial cases including contested divorce, mutual divorce, domestic violence, child custody and maintenance.
+                Over 15+ years experience in matrimonial cases including contested divorce, mutual divorce, domestic violence, child custody and maintenance.
             </p>
             <div class="cta-buttons">
                 <a href="https://wa.me/+919421861640" class="btn btn-primary">Online Consultation</a>
